--- a/src/pages/forgotPassword/style.css
+++ b/src/pages/forgotPassword/style.css
@@ -4,7 +4,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-  background-color: #FFFFFF; 
+    background-color: #FFFFFF; 
 }
 
 .form-side {
@@ -21,7 +21,10 @@
     width: 100%;
     height: 600px;
     max-width: 350px; 
+    display: flex;
     text-align: center; 
+    align-items: center;
+    justify-content: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -65,8 +68,9 @@ svg {
 }
 
 .separator-line {
+    width: 310px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-    margin: 60px 0 15px 0;
+    margin: 50px 0px 15px 24px;
 }
 
 .create-account-link {
@@ -85,4 +89,43 @@ svg {
 .forgot-form-container.smaller-container .forgot-title {
     text-align: center;
     margin-bottom: 20px;
+}
+
+/*button*/
+
+
+.custom-button-forgot {
+  width: 300px;
+  padding: 0px 30px;
+  border-radius: 200px;
+  border: none;
+  height: 55px;
+  
+ 
+  display: flex;
+  align-items: center;     
+  justify-content: center;
+
+  background-color: #FFFBD8;  
+  font-family: 'Nunito', sans-serif; 
+  font-size: 25px;  
+  font-weight: 500;          
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+
+
+  color: #000;
+  cursor: pointer;
+  transition: all 0.2s ease; 
+}
+
+.custom-button-forgot:hover {
+
+  background-color: #f0eccc; 
+  transform: translateY(-2px); 
+}
+
+.custom-button-forgot:active {
+  
+  transform: translateY(1px);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
