--- a/src/pages/createPatient/style.css
+++ b/src/pages/createPatient/style.css
@@ -58,11 +58,6 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
 }
 
-.caderno-avatar{
-  height: 50px; 
-  width: 50px;
-  margin-right: 30px;
-}
 
 .student-card-info {
   flex: 1; 
@@ -144,6 +139,7 @@
 
 
 
+
 body {
   margin: 0;
   font-family: -apple-system, 'Nunito', sans-serif;
@@ -212,32 +208,46 @@ body {
   width: 59px;
 }
 
-.top-container {
-  display: flex;
-  justify-content: space-between; 
-  align-items: center;        
-  margin-bottom: 0.5rem;      
-}
-
-
-.create-patient-bnt {
-background-color: #FFF6D8;
-  color: #5c5c5c; 
-  padding: 0.75rem 1.5rem;
-  border-radius: 20px;
+.create-caderno{
+  padding: 0.8rem 1.5rem;
   border: none;
-  font-size: 0.9rem;
+  border-radius: 20px;
   font-weight: 600;
-  font-family: 'Nunito', sans-serif;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: all 0.2s;
-  margin-left: auto; 
+  font-size: 16px;
+  transition: background-color 0.2s;
+  background-color: #D8F5F3;
+  font-family: Nunito;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+  width: 200px;
+  margin-right: 20px;
+  font-weight: 500px;
 }
 
-.create-patient-bnt:hover {
-   background-color: #f7e9b0;
-  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.12);
-  transform: translateY(-2px);
+.top-container{
+  display: flex;
+  align-items: center;        
+  margin-bottom: 60px; 
+  
 }
 
+.seta{
+    margin-top: 20px;
+}
+
+.bnt-details{
+  padding: 1px;
+  border: none;
+  border-radius: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 0.9rem;
+  transition: background-color 0.2s;
+  background-color: #D8F5F3;
+  font-family: Nunito;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+  width: 525px;
+  height: 20px;
+  margin-right: 20px;
+  margin-top: 5px;
+}
