--- a/src/pages/mainActivities/style.css
+++ b/src/pages/mainActivities/style.css
@@ -246,8 +246,14 @@ body {
   background-color: #D8F5F3;
   font-family: Nunito;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
-  width: 525px;
+  width: 425px;
   height: 20px;
   margin-right: 20px;
   margin-top: 5px;
+}
+
+.caderno-avatar{
+  margin-right: 50px;
+  width: 70px;
+  height: 70px;
 }
