--- a/src/pages/patients/style.css
+++ b/src/pages/patients/style.css
@@ -58,10 +58,12 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
 }
 
-.caderno-avatar{
-  height: 50px; 
-  width: 50px;
-  margin-right: 30px;
+.student-card-avatar {
+  height: 70px; 
+  width: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 1.5rem;
 }
 
 .student-card-info {
@@ -216,7 +218,8 @@ body {
   display: flex;
   justify-content: space-between; 
   align-items: center;        
-  margin-bottom: 0.5rem;      
+  margin-bottom: 0.5rem; 
+  margin-left: 30px;     
 }
 
 
