--- a/src/pages/mainActivities/style.css
+++ b/src/pages/mainActivities/style.css
@@ -211,8 +211,8 @@ body {
 .create-caderno{
   padding: 0.8rem 1.5rem;
   border: none;
-  border-radius: 25px;
-  font-weight: 1;
+  border-radius: 20px;
+  font-weight: 600;
   cursor: pointer;
   
   transition: background-color 0.2s;
@@ -237,11 +237,13 @@ body {
   display: flex;
   align-items: center;        
   margin-bottom: 60px; 
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.seta{
-    margin-top: 20px;
+.seta-main{
+    width: 24px; 
+    height: 24px;
 }
 
 .bnt-details{
@@ -314,15 +316,6 @@ body {
     border-bottom: none; /* Remove a borda do último item */
 }
 
-.dropdown-subtitle {
-    font-size: 0.75rem; /* Fonte bem pequena */
-    color: #666; 
-    margin: 5px 0 0 10px; /* Margem para alinhar abaixo do botão */
-    width: 200px; /* Garante que ocupe a mesma largura do botão */
-    line-height: 1.2;
-    font-family: Nunito;
-}
-
 .dropdown-menu a:hover {
     background-color: #f0f8ff; /* Cor ao passar o mouse */
     color: #008D85;
@@ -330,22 +323,5 @@ body {
 
 .dropdown-arrow {
     width: 32px; 
-    height: 12px;
-}
-
-.button-and-subtitle-wrapper {
-    display: flex;
-    flex-direction: column; /* Para empilhar o botão e o subtítulo */
-    align-items: flex-start; /* Alinha o conteúdo à esquerda dentro do wrapper */
-}
-
-.bnts-top {
-    /* Tornar o contêiner flexível para alinhar os wrappers lado a lado */
-    display: flex;
-    /* Adiciona espaço entre os dois blocos (Criar e Gerenciar) */
-    gap: 20px; 
-    /* Garante que os itens fiquem alinhados ao topo ou centro, se houver diferença de altura */
-    align-items: flex-start; 
-    
-    /* Você pode remover a margin-right dos botões, pois o 'gap' já fará isso */
+    height: 32px;
 }
