--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -76,7 +76,7 @@ body {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
   gap: 170px;
-
+  margin-top: 35px;
 
 }
 
@@ -165,15 +165,17 @@ body {
 .btn {
   padding: 0.8rem 1.5rem;
   border: none;
-  border-radius: 20px;
-  font-weight: 600;
+  border-radius: 30px;
+  font-weight: 1;
   cursor: pointer;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   transition: background-color 0.2s;
   background-color: #D8F5F3;
   font-family: Nunito;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
   width: 200px;
+  margin-top: 20px;
+  margin-left: 120px;
 }
 
 .btn:hover {
