--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,7 +1,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
   background-color: #fcfcff; 
   color: #333;
 }
@@ -166,12 +166,12 @@ body {
   padding: 0.8rem 1.5rem;
   border: none;
   border-radius: 30px;
-  font-weight: 1;
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
   cursor: pointer;
   font-size: 1.2rem;
   transition: background-color 0.2s;
   background-color: #D8F5F3;
-  font-family: Nunito;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
   width: 200px;
   margin-top: 20px;
