--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: Nunito, sans-serif;
@@ -6,13 +5,13 @@ body {
   color: #333;
 }
 
-.dashboard-container {
+.home-dashboard-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-
+/* HEADER PERMANECE */
 .header {
   display: flex;
   justify-content: space-between;
@@ -25,7 +24,7 @@ body {
 .logo {
   width: 150px;
   height: 70px;
- object-fit: contain;
+  object-fit: contain;
 }
 
 .navbar {
@@ -41,7 +40,6 @@ body {
   font-size: 20px;
   padding-bottom: 4px;
   margin-left: 10%;
-
 }
 
 .nav-link.active {
@@ -49,7 +47,7 @@ body {
   border-bottom: 3px solid #63E9E2;
 }
 
-.user-controls {
+.home-user-controls {
   display: flex;
   align-items: center;
   gap: 1.5rem;
@@ -69,50 +67,48 @@ body {
   width: 59px;
 }
 
-
-.main-content {
+/* MAIN */
+.home-main-content {
   display: flex;
   flex: 1;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
   gap: 170px;
   margin-top: 35px;
-
 }
 
-.content-left {
-  flex: 1 ; 
- 
+.home-content-left {
+  flex: 1;
   margin-left: 50px;
 }
 
-.content-right {
-  flex: 0.7; 
+.home-content-right {
+  flex: 0.7;
   margin-left: 50px;
 }
 
-
-.content-left h1 {
-  font-size: 2.25rem;
+.home-content-left h1 {
+  font-size: 3rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
   color: #111;
 }
 
-.welcome-message {
+.home-welcome-message {
   color: #777;
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 2.5rem;
 }
 
-.content-left h2 {
+.home-content-left h2 {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
   color: #222;
 }
 
-.activity-card {
+/* ACTIVITY CARDS */
+.home-activity-card {
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -122,47 +118,46 @@ body {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  height: 22%;
+  height: 30%;
+  width: 110%;
 }
 
-.activity-card:hover {
+.home-activity-card:hover {
   transform: translateY(-4px);
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
 }
 
-.activity-image {
+.home-activity-image {
   height: 90px;
   margin-right: 1.5rem;
 }
 
-.activity-info h3 {
+.home-activity-info h3 {
   margin: 0 0 0.25rem 0;
   font-size: 1.25rem;
   color: #333;
 }
 
-.activity-info p {
+.home-activity-info p {
   margin: 0;
   color: #666;
   font-size: 0.95rem;
 }
 
-.arrow {
+.home-arrow {
   margin-left: auto;
-  font-size: 1.75rem;
-  color: #bbb;
-  font-weight: 300;
+  height: 57px;
+  width: 57px;
 }
 
-
-
-.action-buttons {
+/* BUTTON */
+.home-action-buttons {
   display: flex;
   gap: 3rem;
   margin-bottom: 2.5rem;
 }
 
-.btn-primary-session {
+.home-btn-primary-session {
   padding: 0.8rem 1.5rem;
   border: none;
   border-radius: 30px;
@@ -173,37 +168,36 @@ body {
   transition: background-color 0.2s;
   background-color: #D8F5F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
-  width: 200px;
+  width: 250px;
   margin-top: 20px;
-  margin-left: 120px;
+  margin-left: 260px;
 }
 
-.btn-primary-session:hover {
+.home-btn-primary-session:hover {
   background-color: #66c0d4;
 }
 
 
-
-.content-right h2 {
-  font-size: 1.5rem;
+.home-content-right h2 {
+  font-size: 2rem;
   margin-bottom: 1.5rem;
   color: #222;
 }
 
-.student-list-card {
+.home-student-list-card {
   background-color: #fff;
   border-radius: 50px;
   padding: 1.5rem;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  width: 70%;
-  height: 60%;
+  width: 80%;
+  height: 65%;
 }
 
-.student-list-header {
+.home-student-list-header {
   display: flex;
   justify-content: space-between;
   color: #999;
-  font-size: 0.9rem;
+  font-size: 1.3rem;
   font-weight: 500;
   margin-bottom: 1.5rem;
   padding: 0 1rem;
@@ -211,7 +205,7 @@ body {
   border-bottom: 0.1px solid #AEE2E0;
 }
 
-.student-row {
+.home-student-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -220,37 +214,34 @@ body {
   margin-bottom: 0.5rem;
 }
 
-.student-row:hover {
+.home-student-row:hover {
   background-color: #f7f9fa;
 }
 
-.student-name-group {
+.home-student-name-group {
   display: flex;
   align-items: center;
   gap: 1rem;
   font-weight: 600;
+  font-size: 1.5rem;
+
 }
 
-.student-avatar {
-  height: 40px;
-  width: 40px;
+.home-student-avatar {
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   object-fit: cover;
+  
 }
 
-.student-activity-tag {
+.home-student-activity-tag {
   background-color: #FFF6D8;
   color: #000;
   padding: 0.5rem 1rem;
   border-radius: 60px;
-  font-size: 0.85rem;
+  font-size: 1.2rem;
   font-weight: 600;
   font-family: Nunito;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
-}
-
-
-.arrow{
-  height: 57px;
-  width: 57px;
 }
