styles: atualizações de paginas

--- a/src/pages/session/style.css
+++ b/src/pages/session/style.css
@@ -42,7 +42,7 @@
     height: 44px;
 }
 
-.session-subtitle {
+.session-subtitle-session {
     font-family: 'Nunito', sans-serif;
     font-size: 1.25rem;
     font-weight: 200;
