--- a/src/pages/NewActivitiePersonalize/style.css
+++ b/src/pages/NewActivitiePersonalize/style.css
@@ -97,7 +97,7 @@ body {
 
 .form-label {
   display: block;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
   color: #333;
   margin-bottom: 14px;
@@ -110,8 +110,8 @@ body {
 
 /* ======= TEXT INPUT ======= */
 .text-input {
-  width: 93%;
-  height: 33px;
+  width: 80%;
+  height: 50px;
   box-sizing: border-box;
   border: 1px solid #000;
   border-radius: 10px;
@@ -119,6 +119,7 @@ body {
   font-size: 15px;
   font-style: italic;
   color: #000;
+
 }
 
 /* ======= FILE FIELD ======= */
@@ -229,7 +230,7 @@ body {
   flex: 0.25 1 auto;
   display: flex;
   align-items: center;
-  border: 1px solid #D3D3D3;
+  border: 1px solid #000;
   border-radius: 14px;
   padding: 12px 14px;
   background: #fff;
@@ -280,7 +281,7 @@ body {
   gap: 6px;
   color: #555;
   font-weight: 200;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .alt-add svg {
