--- a/src/pages/NotebookDetails/style.css
+++ b/src/pages/NotebookDetails/style.css
@@ -16,7 +16,7 @@
     font-family: 'Nunito', sans-serif;
     font-size: 2.25rem;
     margin-top: 0;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
     color: #111;
 }
 
@@ -117,9 +117,9 @@
 /* ESTILOS GENÉRICOS */
 .top-container {
     display: flex;
-    align-items: start;
+    align-items: center;
     margin-bottom: 10px;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .pagination-controls {
@@ -189,6 +189,9 @@ background-color: #FFF6D8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: all 0.2s;
-  margin-left: 1120px;
+  margin-left: 100px;
   margin-bottom: 5px; 
+  white-space: nowrap;
+  overflow: hidden;    
+  text-overflow: ellipsis; 
 }
